Regression: Sculpt mode Annotation tool cursor conflict #81948

Closed
opened 2020-10-22 09:03:20 +02:00 by TheRedWaxPolice · 15 comments

System Information
Operating system: Win 10

Blender Version
Broken: 2.91, 3.4
Worked: 2.90
Caused by b9e4696641

Short description of error
The Annotation tool in sculpt mode is not using it's proper cursor. It's using the regular sculpting cursor instead.
When you start drawing, the original cursor shows up on top of the regular sculpting cursor.
The end result is two cursors displaying at the same time and the original one flickering sometimes...

Exact steps for others to reproduce the error
Try to use the Annotation tool in sculpt mode....

Here 2.90 (working fine)
2020-10-22_07-36-09.gif

Here 2.91 (broken)
2020-10-22_07-37-00.gif

**System Information** Operating system: Win 10 **Blender Version** Broken: 2.91, 3.4 Worked: 2.90 Caused by b9e4696641 **Short description of error** The Annotation tool in sculpt mode is not using it's proper cursor. It's using the regular sculpting cursor instead. When you start drawing, the original cursor shows up on top of the regular sculpting cursor. The end result is two cursors displaying at the same time and the original one flickering sometimes... **Exact steps for others to reproduce the error** Try to use the Annotation tool in sculpt mode.... Here 2.90 (working fine) ![2020-10-22_07-36-09.gif](https://archive.blender.org/developer/F9032989/2020-10-22_07-36-09.gif) Here 2.91 (broken) ![2020-10-22_07-37-00.gif](https://archive.blender.org/developer/F9032994/2020-10-22_07-37-00.gif)

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

#84913 was marked as duplicate of this issue

#84913 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, probably caused by b9e4696641

Can confirm, probably caused by b9e4696641
Member

Added subscribers: @PabloDobarro, @antoniov

Added subscribers: @PabloDobarro, @antoniov
Member

@PabloDobarro , @antoniov : Can we make an exception to the rule in sculpt here (looks awkward)?

@PabloDobarro , @antoniov : Can we make an exception to the rule in sculpt here (looks awkward)?

IMHO the logic cursor is the same used in other areas (like 2.90)

IMHO the logic cursor is the same used in other areas (like 2.90)

Added subscriber: @MeshVoid

Added subscriber: @MeshVoid

Experience the same problem.

Experience the same problem.

Added subscriber: @Soutrik

Added subscriber: @Soutrik

Blender 2.91.0
Ubuntu 20.04
HP Laptop

The icon is appearing only when moving the cursor very fast , and when it doesnt show when the cursor is stationary
blenderfirstproblem.gif
I am a beginner developer , can anyone point me to which files are related to this cursor, or where to find information about it , if so , it would be very helpful.

Blender 2.91.0 Ubuntu 20.04 HP Laptop The icon is appearing only when moving the cursor very fast , and when it doesnt show when the cursor is stationary ![blenderfirstproblem.gif](https://archive.blender.org/developer/F9167473/blenderfirstproblem.gif) I am a beginner developer , can anyone point me to which files are related to this cursor, or where to find information about it , if so , it would be very helpful.
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Pratik Borhade changed title from Sculpt mode Annotation tool cursor conflict to Regression Sculpt mode Annotation tool cursor conflict 2023-01-12 11:12:54 +01:00
Pratik Borhade self-assigned this 2023-01-12 11:13:16 +01:00
Pratik Borhade changed title from Regression Sculpt mode Annotation tool cursor conflict to Regression: Sculpt mode Annotation tool cursor conflict 2023-01-12 11:13:31 +01:00
Philipp Oeser removed the
Interest
Sculpt, Paint & Texture
label 2023-02-10 09:12:16 +01:00
Raul Fernandez Hernandez self-assigned this 2024-02-13 10:48:53 +01:00
Julien Kaspar added this to the Sculpt, Paint & Texture project 2024-02-13 17:52:00 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-15 15:28:29 +01:00
Member

Hi, AFAICS this is not resolved yet. Can still see sculpt brush cursor when annotation tool is selected.
I have a fix though, will submit the PR.

Hi, AFAICS this is not resolved yet. Can still see sculpt brush cursor when annotation tool is selected. I have a fix though, will submit the PR.
Pratik Borhade added
Status
Confirmed
and removed
Status
Resolved
labels 2024-06-04 12:51:23 +02:00
Member

Fix !122709

Fix !122709
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-06-05 13:47:18 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81948
No description provided.