Fix #81948: Regression: Sculpt mode Annotation tool cursor conflict

Sculpt brush cursor is still drawn when annotation tool is selected.
Use `SCULPT_poll` function for paint cursor poll function (`pc->poll`).
This new poll function checks whether active tool is brush. In case of
non-brush tools (transform, annotate), poll function will return false
which eventually prevents pc->draw() from drawing the brush cursor.

Fix is similar to !122657

Pull Request: https://projects.blender.org/blender/blender/pulls/122709